2007-07-10  Adam Schreiber  <sadam@clemson.edu>
    
    * plugins/applet/seahorse-applet.c: Add word wrapping to window that
    displays text.

2007-07-07  Stef Walter  <stef@memberwebs.com>

   * configure.in: Bump version number
   
=== seahorse-2.19.5 ===

2007-07-07  Stef Walter  <stef@memberwebs.com>

    * NEWS:
    * README:
    * configure.in: Release 2.19.5
    
2007-07-07  Adam Schreiber  <sadam@clemson.edu>
    
    * agent/seahorse-agent-cache.c:
    * agent/seahorse-agent-ssh.c: When only using the ssh portion of 
    seahorse-agent, still init the cache.  Patch from Ted Percival.
    Fixes bug #454469

2007-06-24  Daniel Nylander <po@danielnylander.se>

	* plugins/applet/docs/sv/sv.po: Added Swedish translation
	* plugins/applet/docs/sv/legal.xml: Updated translation
	* plugins/applet/docs/sv/seahorse-applet.xml: Updated translation
	* plugins/applet/docs/Makefile.am: Added sv to DOC_LINGUAS

2007-06-22  Stef Walter  <stef@memberwebs.com>

    * Use my real name in copyrights, and proper email address.
    This change touched most files in the project, in comments 
    and strings. 
    
2007-06-22  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-ssh-askpass.c: Internationalize properly.
    Patch from Gabor Kelemen.  Fixes bug #450087

2007-06-18  Stef Walter  <stef@memberwebs.com>

    * configure.in: Bump version number

=== seahorse-2.19.4 ===

2007-06-18  Stef Walter  <stef@memberwebs.com>

    * NEWS:
    * README:
    * configure.in: Release 2.19.4

2007-06-18  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade: Add ability to change gnome-keyring
    master password.  Fixes bug #356575 
    * daemon/seahorse-service.c:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-notification.c: Gives more detail for imported keys 
    when using the DBus interface.  Partially fixes bug #416458

2007-06-14  Adam Schreiber  <sadam@clemson.edu>
    