@@ -1563,7 +1563,7 @@
       <para>
 	This section describes the preferences settable by choosing 
 	<menuchoice>
-	  <guimenu>Desktop</guimenu>
+	  <guimenu>System</guimenu>
 	  <guimenuitem>Preferences</guimenuitem>
 	  <guimenuitem>Encryption Preferences</guimenuitem>
 	</menuchoice> from the panel or
@@ -1706,6 +1706,34 @@
 	  likely be faster than accessing remote servers.
 	</para>
       </sect3>
+
+      <sect3 id="keyring">
+	<title>GNOME Keyring</title>
+	<para>
+	  You can change the password of the default key ring created
+	  the first time you saved a password, a passphrase to
+	  access a SSH server or any other secret during a GNOME
+	  session.
+	</para>
+	<para>
+	  To change the master password of the key ring, type the
+	  original password in the <guilabel>Original Master
+	    Password</guilabel> text box, the new password in the
+	  <guilabel>New Master Password</guilabel> text box and
+	  confirm it in the <guilabel>Confirm Master
+	    Password</guilabel> text box. To apply the settings, press
+	  <guibutton>Apply</guibutton>.
+	  If the original master password is correct, you will get a status
+	  message indicating the success of the operation. If the
+	  master password is not correct you will be asked to check
+	  its correctness. 
+	</para>
+	<para>
+	  To clear all the text boxes,
+	  press <guibutton>Clear</guibutton>.
+	</para>
+      </sect3>
+
     </sect2>
   </sect1>
       
