@@ -1,3 +1,9 @@
+2007-07-16  Adam Schreiber  <sadam@clemson.edu>
+    
+    * help/C/seahorse.xml: Add documentation for changing the password
+    on the default gnome-keyring key ring.  Patch by Milo Casagrande.
+    Fixes bug #453043
+
 2007-07-10  Adam Schreiber  <sadam@clemson.edu>
     
     * plugins/applet/seahorse-applet.c: Add word wrapping to window that
